# terminal_portfolio

./: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  index.html
.github/workflows/: deploy.yml
guide/: cmd_for_running.txt
portfolio_rust/: .gitignore  Dockerfile  README.md  Trunk.toml
portfollio_rust/: Cargo.toml  Trunk.toml  docker-compose.yml
src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/terminal/: terminal.tsx
src/lib/: command-parser.ts  portfolio-data.ts  terminal-store.ts
terminal/: README.md
