[package]
name = "rust-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"

# 🔥 Updated web-sys with ALL required features
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document", 
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "EventTarget",
  "KeyboardEvent",
  "HtmlDivElement",
  "Node",
  "HtmlCollection",
]}